[package]
name = "xyplot"
version = "0.1.5"
edition = "2024"
authors = ["Balazs Horvath"]
description = "A tool for plotting images in a grid with labels"
license = "MIT"
repository = "https://github.com/rakki194/xyplot"

[dependencies]
xio = "0.1.7"
imx = "0.1.12"
tokio = { version = "1.43.0", features = ["full"] }
clap = { version = "4.5.30", features = ["derive"] }
anyhow = "1.0.96"
image = "0.25.5"
imageproc = "0.25.0"
ab_glyph = "0.2.29"
rgb = "0.8.50"

[dev-dependencies]
tempfile = "3.17.1"
